fixed and z-index

--- a/pm-proj013/scss/style.scss
+++ b/pm-proj013/scss/style.scss
@@ -29,9 +29,16 @@ $path-rel: "../img";
   box-sizing: border-box;
 }
 
+
 body,
 button {
   @include font-family;
+}
+
+body {
+  @include img-replace("cart.png", center, $white);
+  display: flex;
+  height: 100vh;
 }
 
 div#minimum-stock p,
@@ -47,17 +54,10 @@ p {
 form {
   display: flex;
   flex-direction: column;
-  width: 600px;
-  max-width: 90%;
-  margin: 10px auto;
-}
-
-div#add-products,
-div#minimum-stock,
-div#arrow-save-item,
-div#plus-minus,
-div#trash-plus-minus {
-  display: flex;
+  width: 100%;
+  max-width: 900px;
+  margin: 0 auto;
+  position: relative;
 }
 
 input#input-products {
@@ -106,19 +106,33 @@ button#trash {
   width: calc(100% / 3);
 }
 
+div#add-products,
+div#arrow-save-item,
+div#trash-plus-minus {
+  display: flex;
+}
+
 div#minimum-stock {
+  display: flex;
   background-color: $black;
   justify-content: space-between;
   align-items: center;
 }
 
 div#plus-minus {
+  display: flex;
   justify-content: space-around;
   width: 50%;
 }
 
-ul {
+div#add-products-container {
+  display: flex;
+  flex-direction: column;
+}
+
+ul#list-item {
   list-style-type: none;
+  margin-top: 70px;
 }
 
 li {
@@ -150,3 +164,15 @@ li sup {
  li span {
   margin-left: auto;
  }
+
+.fixed {
+  position: fixed;
+  box-shadow: 0 5px 0 rgba(0,0,0,0.1);
+  z-index: 10;
+  width: inherit;
+  max-width: 900px;
+}
+
+.hidden {
+  display: none !important;
+}
